# omp_test

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh  omp_test.cpp  run.sh
common/: CMakeLists.txt  omp_resize.cpp  omp_resize.hpp
